[gd_scene load_steps=2 format=3 uid="uid://cqjewtw3dwb50"]

[ext_resource type="Script" uid="uid://5kc3lpoh7n2o" path="res://3DUI/keyboard/keyboard_2d.gd" id="1_kwc3g"]

[node name="Keyboard2D" type="Control"]
custom_minimum_size = Vector2(522, 176)
layout_mode = 3
anchors_preset = 0
offset_right = 522.0
offset_bottom = 176.0
script = ExtResource("1_kwc3g")

[node name="Lower" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 522.0
offset_bottom = 176.0

[node name="NumRow" type="HBoxContainer" parent="Lower"]
layout_mode = 2

[node name="`" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = "`"
alignment = 0

[node name="1" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "1"

[node name="2" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "2"

[node name="3" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "3"

[node name="4" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "4"

[node name="5" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "5"

[node name="6" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "6"

[node name="7" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "7"

[node name="8" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "8"

[node name="9" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "9"

[node name="0" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "0"

[node name="-" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "-"

[node name="=" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "="

[node name="Delete" type="Button" parent="Lower/NumRow"]
custom_minimum_size = Vector2(53, 32)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = "Del"
alignment = 2

[node name="QWERTY" type="HBoxContainer" parent="Lower"]
layout_mode = 2
alignment = 2

[node name="Tab" type="Button" parent="Lower/QWERTY"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
alignment = 0

[node name="q" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "q"

[node name="w" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "w"

[node name="e" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "e"

[node name="r" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "r"

[node name="t" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "t"

[node name="y" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "y"

[node name="u" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "u"

[node name="i" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "i"

[node name="o" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "o"

[node name="p" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "p"

[node name="[" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "["

[node name="]" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "]"

[node name="\\" type="Button" parent="Lower/QWERTY"]
custom_minimum_size = Vector2(36, 32)
layout_mode = 2
focus_mode = 0
text = "\\"

[node name="ASDF" type="HBoxContainer" parent="Lower"]
layout_mode = 2
alignment = 2

[node name="CapsLock" type="Control" parent="Lower/ASDF"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
mouse_filter = 2

[node name="a" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "a"

[node name="s" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "s"

[node name="d" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "d"

[node name="f" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "f"

[node name="g" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "g"

[node name="h" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "h"

[node name="j" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "j"

[node name="k" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "k"

[node name="l" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "l"

[node name=";" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = ";"

[node name="\'" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "'"

[node name="Enter" type="Button" parent="Lower/ASDF"]
custom_minimum_size = Vector2(59, 32)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = " Enter"
alignment = 2

[node name="ZXCV" type="HBoxContainer" parent="Lower"]
layout_mode = 2
alignment = 2

[node name="z" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "z"

[node name="x" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "x"

[node name="c" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "c"

[node name="v" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "v"

[node name="b" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "b"

[node name="n" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "n"

[node name="m" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "m"

[node name="," type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = ","

[node name="period" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "."

[node name="slash" type="Button" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "/"

[node name="RShift" type="Control" parent="Lower/ZXCV"]
custom_minimum_size = Vector2(77, 0)
layout_mode = 2
mouse_filter = 2

[node name="SpaceRow" type="HBoxContainer" parent="Lower"]
layout_mode = 2
alignment = 2

[node name="Control2" type="Control" parent="Lower/SpaceRow"]
custom_minimum_size = Vector2(115.79, 0)
layout_mode = 2

[node name="Space" type="Button" parent="Lower/SpaceRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = "Space"

[node name="Control" type="Control" parent="Lower/SpaceRow"]
custom_minimum_size = Vector2(112.995, 0)
layout_mode = 2

[node name="Upper" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 522.0
offset_bottom = 176.0

[node name="NumRow" type="HBoxContainer" parent="Upper"]
layout_mode = 2

[node name="`" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = "~"
alignment = 0

[node name="1" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "!"

[node name="2" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "@"

[node name="3" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "#"

[node name="4" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "$"

[node name="5" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "%"

[node name="6" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "^"

[node name="7" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "&"

[node name="8" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "*"

[node name="9" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "("

[node name="0" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = ")"

[node name="-" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "_"

[node name="=" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "+"

[node name="Delete" type="Button" parent="Upper/NumRow"]
custom_minimum_size = Vector2(53, 32)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = "Del"
alignment = 2

[node name="QWERTY" type="HBoxContainer" parent="Upper"]
layout_mode = 2
alignment = 2

[node name="Tab" type="Button" parent="Upper/QWERTY"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
alignment = 0

[node name="q" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "Q"

[node name="w" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "W"

[node name="e" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "E"

[node name="r" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "R"

[node name="t" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "T"

[node name="y" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "Y"

[node name="u" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "U"

[node name="i" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "I"

[node name="o" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "O"

[node name="p" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "P"

[node name="[" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "{"

[node name="]" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "}"

[node name="\\" type="Button" parent="Upper/QWERTY"]
custom_minimum_size = Vector2(36, 32)
layout_mode = 2
focus_mode = 0
text = "|"

[node name="ASDF" type="HBoxContainer" parent="Upper"]
layout_mode = 2
alignment = 2

[node name="CapsLock" type="Control" parent="Upper/ASDF"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
mouse_filter = 2

[node name="a" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "A"

[node name="s" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "S"

[node name="d" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "D"

[node name="f" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "F"

[node name="g" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "G"

[node name="h" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "H"

[node name="j" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "J"

[node name="k" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "K"

[node name="l" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "L"

[node name=";" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = ":"

[node name="\'" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "\""

[node name="Enter" type="Button" parent="Upper/ASDF"]
custom_minimum_size = Vector2(59, 32)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = " Enter"
alignment = 2

[node name="ZXCV" type="HBoxContainer" parent="Upper"]
layout_mode = 2
alignment = 2

[node name="z" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "Z"

[node name="x" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "X"

[node name="c" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "C"

[node name="v" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "V"

[node name="b" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "B"

[node name="n" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "N"

[node name="m" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "M"

[node name="," type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "<"

[node name="period" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = ">"

[node name="slash" type="Button" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
text = "?"

[node name="RShift" type="Control" parent="Upper/ZXCV"]
custom_minimum_size = Vector2(77, 0)
layout_mode = 2
mouse_filter = 2

[node name="SpaceRow" type="HBoxContainer" parent="Upper"]
layout_mode = 2
alignment = 2

[node name="Control2" type="Control" parent="Upper/SpaceRow"]
custom_minimum_size = Vector2(115.79, 0)
layout_mode = 2

[node name="Space" type="Button" parent="Upper/SpaceRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = "Space"

[node name="Control" type="Control" parent="Upper/SpaceRow"]
custom_minimum_size = Vector2(112.995, 0)
layout_mode = 2

[node name="CapsLock" type="Button" parent="." groups=["NonKey"]]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
offset_top = 72.0
offset_right = 63.0
offset_bottom = 104.0
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "CapsLock"
alignment = 0

[node name="LeftShift" type="Button" parent="." groups=["NonKey"]]
layout_mode = 2
offset_top = 108.0
offset_right = 81.0
offset_bottom = 140.0
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "Shift"
alignment = 0

[node name="RightShift" type="Button" parent="." groups=["NonKey"]]
custom_minimum_size = Vector2(77, 32)
layout_mode = 2
offset_left = 445.0
offset_top = 108.0
offset_right = 522.0
offset_bottom = 140.0
focus_mode = 0
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "Shift"
alignment = 2

[connection signal="toggled" from="CapsLock" to="." method="_on_caps_lock_toggled"]
[connection signal="toggled" from="LeftShift" to="." method="_on_left_shift_toggled"]
[connection signal="toggled" from="RightShift" to="." method="_on_right_shift_toggled"]
